--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@gorhom/bottom-sheet": "^5.1.6",
+    "@react-native-community/datetimepicker": "8.3.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tanstack/react-query": "^5.80.6",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
@@ -49,6 +51,7 @@
     "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-mmkv": "^3.2.0",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-pager-view": "6.7.1",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~3.17.4",
@@ -58,12 +61,14 @@
     "react-native-tab-view": "^4.1.1",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
+    "react-redux": "^9.2.0",
     "sonner-native": "^0.20.0",
     "zeego": "^3.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "@types/react-native-modern-datepicker": "^1.0.5",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "typescript": "~5.8.3"
